# todo

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  groups.py  tasks.py
app/core/: __init__.py  auth.py  scope.py  security.py
app/models/: __init__.py  group.py  task.py  token.py  user.py
app/schemas/: __init__.py  task.py  user.py
app/services/: __init__.py  conversation_service.py  group_service.py  llm_service.py  task_service.py
app/state_machine/: __init__.py  machine.py
app/telemetry/: __init__.py  instrumentation.py
gha/: README.md
src/todo/: __init__.py  config.py  database.py  main.py  types.py
src/todo/api/: deps.py
src/todo/api/routes/: __init__.py  auth.py  groups.py  tasks.py
src/todo/core/: __init__.py  auth.py  logging.py  recurrence.py  scope.py  security.py
src/todo/models/: __init__.py  group.py  task.py  token.py  user.py
src/todo/schemas/: __init__.py  group.py  task.py  user.py
src/todo/services/: __init__.py  conversation_service.py  group_service.py  llm_service.py  task_service.py
src/todo/state_machine/: __init__.py  machine.py
src/todo/static/: app.js  index.html  style.css
src/todo/telemetry/: __init__.py  instrumentation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_groups.py  test_tasks.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_security.py
